Bug 104695 - missing tiles ...
Summary: missing tiles ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-15 11:06 UTC by Michael Meeks
Modified: 2016-12-16 10:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
broken bits. (87.11 KB, image/png)
2016-12-15 11:07 UTC, Michael Meeks
Details
with debug mode enabled (133.05 KB, image/png)
2016-12-15 11:08 UTC, Michael Meeks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2016-12-15 11:06:09 UTC
Loading the ESC document on the demo server: 

https://demo.collaboracloudsuite.com/tdf/index.php/apps/files/?dir=/ESC+minutes

I see the attached screenshot - with and without the debug mode on:
Comment 1 Michael Meeks 2016-12-15 11:07:35 UTC
Created attachment 129661 [details]
broken bits.
Comment 2 Michael Meeks 2016-12-15 11:08:52 UTC
Created attachment 129662 [details]
with debug mode enabled

turning on debug unfortunately refreshes everything - but then paging down a bit I see the attached ...
Comment 3 Michael Meeks 2016-12-15 14:44:08 UTC
Pranav debugged this, and I committed a fix; Pranav is working on a unit test ... hopefully will be ready in time for the call =)
Comment 4 Commit Notification 2016-12-16 10:26:19 UTC
Pranav Kant committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/online/commit/?id=0e043853ea68e68354de5d9c87a32029319dfdc6

tdf#104695: Unit test for missing tiles due to low socket buffer size